<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:id="@+id/dialog_title"
                android:text="@string/dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_margin_top" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/dialog_margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radio_tag"
                    android:text="@string/radio_tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radio_author"
                    android:text="@string/radio_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RadioGroup>


            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:id="@+id/categories_title"
                android:text="@string/articles_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_margin_top" />

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_marginTop="@dimen/dialog_margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:id="@+id/date_title"
                android:text="@string/search_by_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_margin_top" />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:id="@+id/date_from_title"
                android:text="@string/format_date_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_margin_top" />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:id="@+id/date_to_title"
                android:text="@string/format_date_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_margin_top" />

            <Button
                android:id="@+id/pick_date"
                android:text="@string/pick_date"
                android:layout_marginTop="@dimen/dialog_margin_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/dialog_margin_top">

            <Button
                android:id="@+id/btn_submit"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/dialog_ok_button"
                tools:ignore="RtlHardcoded" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
